--- a/rev-com-manage/src/assets/css/base.css
+++ b/rev-com-manage/src/assets/css/base.css
@@ -1,4 +1,4 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -14,12 +14,50 @@ body {
   margin: 0;
 }
 
-input,button,textarea{
+input,
+button,
+textarea {
   outline: none;
   border: none;
 }
-.text-nowrap{
+.text-nowrap {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+}
+body,html{
+  scrollbar-width: none; /* firefox */
+  -ms-overflow-style: none; /* IE 10+ */
+}
+::-webkit-scrollbar {
+  display: none;
+}
+.el-input__wrapper{
+  padding: 5px 12px!important;
+}
+.table-control-btn{
+  font-size: 13px;
+}
+.drawer-title-outer{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border-bottom: 1px solid #dcdfe6;
+  padding: 0 0 15px 0;
+}
+.drawer-title-outer .title{
+  font-weight: bold;
+}
+.drawer-title-outer .drawer-define-btn{
+  background-color: #00a1d6;
+  color: #fff;
+  padding: 8px 20px;
+  border-radius:5px ;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.el-form-item__label{
+  text-align: left;
 }
