实现编辑增删改

--- a/rev-com-manage/src/assets/css/base.css
+++ b/rev-com-manage/src/assets/css/base.css
@@ -25,6 +25,15 @@ textarea {
   text-overflow: ellipsis;
   white-space: nowrap;
 }
+.centered{
+  position: relative;
+}
+.centered >img{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%,-50%);
+}
 body,
 html {
   scrollbar-width: none; /* firefox */
