--- a/rev-com-client/src/assets/css/base.css
+++ b/rev-com-client/src/assets/css/base.css
@@ -1,6 +1,9 @@
 *{
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-size: 14px;
+  font-family: "Arial, Helvetica, sans-serif"!important;
 }
 input,textarea,button{
     border: none;
@@ -12,9 +15,18 @@ a{
 ul,li{
  margin: 0;
  padding: 0;
+ list-style: none;
 }
 .text-nowrap{
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
+}
+.center-auto{
+  width: 92%;
+  background-color:#fff ;
+  margin: 0 auto;
+  border-left:1px solid #d3d3d3;
+  border-right:1px solid #d3d3d3;
+  padding: 20px;
 }
